--- a/genebank-ncbi.html
+++ b/genebank-ncbi.html
@@ -279,7 +279,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#programação-orientada-a-objetos"><i class="fa fa-check"></i><b>14.1</b> Programação orientada a objetos</a></li>
 <li class="chapter" data-level="14.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#principais-estruturas-de-dados"><i class="fa fa-check"></i><b>14.2</b> Principais estruturas de dados</a></li>
 <li class="chapter" data-level="14.3" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#principais-tipos-de-dados"><i class="fa fa-check"></i><b>14.3</b> Principais tipos de dados</a></li>
-<li class="chapter" data-level="14.4" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#classe"><i class="fa fa-check"></i><b>14.4</b> Classe</a>
+<li class="chapter" data-level="14.4" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#classe-x-propriedade-x-atributo"><i class="fa fa-check"></i><b>14.4</b> Classe x propriedade x atributo</a>
 <ul>
 <li class="chapter" data-level="14.4.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#sistema-de-referência"><i class="fa fa-check"></i><b>14.4.1</b> Sistema de referência</a></li>
 </ul></li>
@@ -314,61 +314,62 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="15.3.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#importando-do-iqtree"><i class="fa fa-check"></i><b>15.3.3</b> Importando do IQTree</a></li>
 <li class="chapter" data-level="15.3.4" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#importando-do-mrbayes"><i class="fa fa-check"></i><b>15.3.4</b> Importando do MrBayes</a></li>
 </ul></li>
-<li class="chapter" data-level="15.4" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#personalizando-o-estilo-da-árvore"><i class="fa fa-check"></i><b>15.4</b> Personalizando o estilo da árvore</a>
+<li class="chapter" data-level="15.4" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#extraindo-clados"><i class="fa fa-check"></i><b>15.4</b> Extraindo clados</a></li>
+<li class="chapter" data-level="15.5" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#personalizando-o-estilo-da-árvore"><i class="fa fa-check"></i><b>15.5</b> Personalizando o estilo da árvore</a>
 <ul>
-<li class="chapter" data-level="15.4.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-ape"><i class="fa fa-check"></i><b>15.4.1</b> Pacote ape</a>
+<li class="chapter" data-level="15.5.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-ape"><i class="fa fa-check"></i><b>15.5.1</b> Pacote ape</a>
 <ul>
-<li class="chapter" data-level="15.4.1.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#ramos"><i class="fa fa-check"></i><b>15.4.1.1</b> Ramos</a></li>
-<li class="chapter" data-level="15.4.1.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#terminais"><i class="fa fa-check"></i><b>15.4.1.2</b> Terminais</a></li>
-<li class="chapter" data-level="15.4.1.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#nós"><i class="fa fa-check"></i><b>15.4.1.3</b> Nós</a></li>
+<li class="chapter" data-level="15.5.1.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#ramos"><i class="fa fa-check"></i><b>15.5.1.1</b> Ramos</a></li>
+<li class="chapter" data-level="15.5.1.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#terminais"><i class="fa fa-check"></i><b>15.5.1.2</b> Terminais</a></li>
+<li class="chapter" data-level="15.5.1.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#nós"><i class="fa fa-check"></i><b>15.5.1.3</b> Nós</a></li>
 </ul></li>
-<li class="chapter" data-level="15.4.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phylocanvas"><i class="fa fa-check"></i><b>15.4.2</b> Pacote phylocanvas</a></li>
-<li class="chapter" data-level="15.4.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phytools"><i class="fa fa-check"></i><b>15.4.3</b> Pacote phytools</a>
+<li class="chapter" data-level="15.5.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phylocanvas"><i class="fa fa-check"></i><b>15.5.2</b> Pacote phylocanvas</a></li>
+<li class="chapter" data-level="15.5.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phytools"><i class="fa fa-check"></i><b>15.5.3</b> Pacote phytools</a>
 <ul>
-<li class="chapter" data-level="15.4.3.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#ramos-1"><i class="fa fa-check"></i><b>15.4.3.1</b> Ramos</a></li>
-<li class="chapter" data-level="15.4.3.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#terminais-1"><i class="fa fa-check"></i><b>15.4.3.2</b> Terminais</a></li>
+<li class="chapter" data-level="15.5.3.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#ramos-1"><i class="fa fa-check"></i><b>15.5.3.1</b> Ramos</a></li>
+<li class="chapter" data-level="15.5.3.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#terminais-1"><i class="fa fa-check"></i><b>15.5.3.2</b> Terminais</a></li>
 </ul></li>
-<li class="chapter" data-level="15.4.4" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-ggtree"><i class="fa fa-check"></i><b>15.4.4</b> Pacote ggtree</a>
+<li class="chapter" data-level="15.5.4" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-ggtree"><i class="fa fa-check"></i><b>15.5.4</b> Pacote ggtree</a>
 <ul>
-<li class="chapter" data-level="15.4.4.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#ramos-2"><i class="fa fa-check"></i><b>15.4.4.1</b> Ramos</a></li>
-<li class="chapter" data-level="15.4.4.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#terminais-2"><i class="fa fa-check"></i><b>15.4.4.2</b> Terminais</a></li>
-<li class="chapter" data-level="15.4.4.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#nós-1"><i class="fa fa-check"></i><b>15.4.4.3</b> Nós</a></li>
-</ul></li>
-</ul></li>
-<li class="chapter" data-level="15.5" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#anotando-dados-na-árvore-usando-r"><i class="fa fa-check"></i><b>15.5</b> Anotando dados na árvore usando R</a>
-<ul>
-<li class="chapter" data-level="15.5.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-ape-1"><i class="fa fa-check"></i><b>15.5.1</b> Pacote ape</a>
-<ul>
-<li class="chapter" data-level="15.5.1.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#ramos-3"><i class="fa fa-check"></i><b>15.5.1.1</b> Ramos</a></li>
-<li class="chapter" data-level="15.5.1.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#terminais-3"><i class="fa fa-check"></i><b>15.5.1.2</b> Terminais</a></li>
-<li class="chapter" data-level="15.5.1.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#nós-2"><i class="fa fa-check"></i><b>15.5.1.3</b> Nós</a></li>
-</ul></li>
-<li class="chapter" data-level="15.5.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phytools-1"><i class="fa fa-check"></i><b>15.5.2</b> Pacote phytools</a>
-<ul>
-<li class="chapter" data-level="15.5.2.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#nós-3"><i class="fa fa-check"></i><b>15.5.2.1</b> Nós</a></li>
+<li class="chapter" data-level="15.5.4.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#ramos-2"><i class="fa fa-check"></i><b>15.5.4.1</b> Ramos</a></li>
+<li class="chapter" data-level="15.5.4.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#terminais-2"><i class="fa fa-check"></i><b>15.5.4.2</b> Terminais</a></li>
+<li class="chapter" data-level="15.5.4.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#nós-1"><i class="fa fa-check"></i><b>15.5.4.3</b> Nós</a></li>
 </ul></li>
 </ul></li>
-<li class="chapter" data-level="15.6" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#plotando-matrizes-data.frames-e-árvore-ao-lado-da-árvore-usando-r"><i class="fa fa-check"></i><b>15.6</b> Plotando matrizes, data.frames e árvore ao lado da árvore usando R</a>
+<li class="chapter" data-level="15.6" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#anotando-dados-na-árvore-usando-r"><i class="fa fa-check"></i><b>15.6</b> Anotando dados na árvore usando R</a>
 <ul>
-<li class="chapter" data-level="15.6.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-ape-2"><i class="fa fa-check"></i><b>15.6.1</b> Pacote ape</a>
+<li class="chapter" data-level="15.6.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-ape-1"><i class="fa fa-check"></i><b>15.6.1</b> Pacote ape</a>
 <ul>
-<li class="chapter" data-level="15.6.1.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#matriz-e-data.frame"><i class="fa fa-check"></i><b>15.6.1.1</b> Matriz e data.frame</a></li>
-<li class="chapter" data-level="15.6.1.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#anéis-em-árvores-circulares"><i class="fa fa-check"></i><b>15.6.1.2</b> Anéis em árvores circulares</a></li>
-<li class="chapter" data-level="15.6.1.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#tanglegram"><i class="fa fa-check"></i><b>15.6.1.3</b> Tanglegram</a></li>
+<li class="chapter" data-level="15.6.1.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#ramos-3"><i class="fa fa-check"></i><b>15.6.1.1</b> Ramos</a></li>
+<li class="chapter" data-level="15.6.1.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#terminais-3"><i class="fa fa-check"></i><b>15.6.1.2</b> Terminais</a></li>
+<li class="chapter" data-level="15.6.1.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#nós-2"><i class="fa fa-check"></i><b>15.6.1.3</b> Nós</a></li>
 </ul></li>
-<li class="chapter" data-level="15.6.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phytools-2"><i class="fa fa-check"></i><b>15.6.2</b> Pacote phytools</a>
+<li class="chapter" data-level="15.6.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phytools-1"><i class="fa fa-check"></i><b>15.6.2</b> Pacote phytools</a>
 <ul>
-<li class="chapter" data-level="15.6.2.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#círculos"><i class="fa fa-check"></i><b>15.6.2.1</b> Círculos</a></li>
-<li class="chapter" data-level="15.6.2.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#barras"><i class="fa fa-check"></i><b>15.6.2.2</b> Barras</a></li>
-<li class="chapter" data-level="15.6.2.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#matrizes"><i class="fa fa-check"></i><b>15.6.2.3</b> Matrizes</a></li>
-<li class="chapter" data-level="15.6.2.4" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#boxplots"><i class="fa fa-check"></i><b>15.6.2.4</b> Boxplots</a></li>
-<li class="chapter" data-level="15.6.2.5" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#tanglegram-1"><i class="fa fa-check"></i><b>15.6.2.5</b> Tanglegram</a></li>
-<li class="chapter" data-level="15.6.2.6" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#phylo.to.map"><i class="fa fa-check"></i><b>15.6.2.6</b> Phylo.to.map</a></li>
-<li class="chapter" data-level="15.6.2.7" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#escala-estratigráfica"><i class="fa fa-check"></i><b>15.6.2.7</b> Escala estratigráfica</a></li>
+<li class="chapter" data-level="15.6.2.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#nós-3"><i class="fa fa-check"></i><b>15.6.2.1</b> Nós</a></li>
 </ul></li>
-<li class="chapter" data-level="15.6.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#estimação-do-estado-ancestral-usando-r"><i class="fa fa-check"></i><b>15.6.3</b> Estimação do estado ancestral usando R</a>
+</ul></li>
+<li class="chapter" data-level="15.7" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#plotando-matrizes-data.frames-e-árvore-ao-lado-da-árvore-usando-r"><i class="fa fa-check"></i><b>15.7</b> Plotando matrizes, data.frames e árvore ao lado da árvore usando R</a>
 <ul>
-<li class="chapter" data-level="15.6.3.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phytools-3"><i class="fa fa-check"></i><b>15.6.3.1</b> Pacote phytools</a></li>
+<li class="chapter" data-level="15.7.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-ape-2"><i class="fa fa-check"></i><b>15.7.1</b> Pacote ape</a>
+<ul>
+<li class="chapter" data-level="15.7.1.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#matriz-e-data.frame"><i class="fa fa-check"></i><b>15.7.1.1</b> Matriz e data.frame</a></li>
+<li class="chapter" data-level="15.7.1.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#anéis-em-árvores-circulares"><i class="fa fa-check"></i><b>15.7.1.2</b> Anéis em árvores circulares</a></li>
+<li class="chapter" data-level="15.7.1.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#tanglegram"><i class="fa fa-check"></i><b>15.7.1.3</b> Tanglegram</a></li>
+</ul></li>
+<li class="chapter" data-level="15.7.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phytools-2"><i class="fa fa-check"></i><b>15.7.2</b> Pacote phytools</a>
+<ul>
+<li class="chapter" data-level="15.7.2.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#círculos"><i class="fa fa-check"></i><b>15.7.2.1</b> Círculos</a></li>
+<li class="chapter" data-level="15.7.2.2" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#barras"><i class="fa fa-check"></i><b>15.7.2.2</b> Barras</a></li>
+<li class="chapter" data-level="15.7.2.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#matrizes"><i class="fa fa-check"></i><b>15.7.2.3</b> Matrizes</a></li>
+<li class="chapter" data-level="15.7.2.4" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#boxplots"><i class="fa fa-check"></i><b>15.7.2.4</b> Boxplots</a></li>
+<li class="chapter" data-level="15.7.2.5" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#tanglegram-1"><i class="fa fa-check"></i><b>15.7.2.5</b> Tanglegram</a></li>
+<li class="chapter" data-level="15.7.2.6" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#phylo.to.map"><i class="fa fa-check"></i><b>15.7.2.6</b> Phylo.to.map</a></li>
+<li class="chapter" data-level="15.7.2.7" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#escala-estratigráfica"><i class="fa fa-check"></i><b>15.7.2.7</b> Escala estratigráfica</a></li>
+</ul></li>
+<li class="chapter" data-level="15.7.3" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#estimação-do-estado-ancestral-usando-r"><i class="fa fa-check"></i><b>15.7.3</b> Estimação do estado ancestral usando R</a>
+<ul>
+<li class="chapter" data-level="15.7.3.1" data-path="filogenia-no-r.html"><a href="filogenia-no-r.html#pacote-phytools-3"><i class="fa fa-check"></i><b>15.7.3.1</b> Pacote phytools</a></li>
 </ul></li>
 </ul></li>
 </ul></li>
